--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vishesh-programming.github.io/codespaces-react",
+  "homepage": ".",
   "name": "codespaces-react",
   "version": "0.1.0",
   "private": true,
